# sandol_meal_service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  meal_service.db  pyproject.toml  requirements.txt  test_meal_service.db
alembic/: env.py
alembic/versions/: 133210f0f0b5_add_user_fields.py  26347cb2feb5_init.py  28554ef143ac_.py  30eaa9adde20_.py  3297eb691f3b_add_user_fields.py  3ac318667d15_.py  3c96d5ed6404_initial_migration.py  428c090a94d0_.py  641a7a29bc65_add_admin_fields_to_user_table.py  712b4c06bfd7_init.py  7a1afeb57cc5_initial_migration.py  7b5fd919d7c8_.py  839cd699aac5_.py  98efbb8938c1_initial_migration.py  fb7832bb4321_.py
app/: __init__.py  database.py
app/config/: __init__.py  config.py  meal_types.json  student_cafeteria.json
app/jobs/: scheduler.py
app/middleware/: __init__.py
app/models/: __init__.py  associations.py  meals.py  restaurants.py  user.py
app/routers/: __init__.py  meals.py  restaurants.py  users.py
app/schemas/: __init__.py  base.py  meals.py  pagination.py  restaurants.py  users.py
app/services/: crawler_service.py  excel_importer.py  ibook_downloader.py  user_service.py
app/utils/: __init__.py  db.py  http.py  lifespan.py  meals.py  restaurants.py  sync_meal_types.py  times.py
